<resources>
    <string name="app_name">Face Recognition Library</string>s
    <string name="title_activity_settings">Settings</string>

    <string name="grayscale">1. Grayscale</string>
    <string name="crop">Crop</string>
    <string name="eyeAlignment">2. Eye Alignment</string>
    <string name="gammaCorrection">1. Gamma Correction</string>
    <string name="doG">1. Difference of Gaussian</string>
    <string name="masking">2. Masking</string>
    <string name="lbp">3. Local Binary Pattern</string>
    <string name="histogrammEqualization">1. Histogramm Equalization</string>
    <string name="resize">1. Resize</string>

    <string name="eigenfaces">Eigenfaces with NN</string>
    <string name="imageReshaping">Image Reshaping with SVM</string>
    <string name="tensorflow">TensorFlow with SVM or KNN</string>
    <string name="caffe">Caffe with SVM or KNN</string>

    <string name="knn">K Nearest Neighbor</string>
    <string name="svm">Support Vector Machine</string>

    <string name="modelFileCaffe">VGG_FACE_deploy.prototxt</string>
    <string name="weightsFileCaffe">VGG_FACE.caffemodel</string>
    <string name="outputLayerCaffe">fc7</string>
    <string name="meanValuesCaffe">104, 117, 123</string>

    <string name="gamma">0.2</string>
    <string name="sigmas">0.25, 4</string>

    <string name="haarcascade_default">haarcascade_frontalface_default</string>
    <string name="haarcascade_alt">haarcascade_frontalface_alt</string>
    <string name="haarcascade_alt2">haarcascade_frontalface_alt2</string>
    <string name="lbpcascade">lbpcascade_frontalface</string>
    <string name="classifier_350kids">02_Classifier_350kids</string>
    <string name="classifier_200adults_350kids">01_Classifier_200adults_350kids</string>

    <string name="haarcascade_eye">haarcascade_eye</string>
    <string name="haarcascade_lefteye">haarcascade_lefteye_2splits</string>
    <string name="haarcascade_righteye">haarcascade_righteye_2splits</string>
</resources>
